fixed css in about to remove gap at mobile screen width.  fixed google review link so it works on both desktop and mobile.

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -281,7 +281,7 @@
 @media screen and (max-width: 501px) {
 
     #about{
-        margin-top: -80px;
+        margin-top: -90px;
     }
 
     #about-call-for-quote-box{
