--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -114,7 +114,7 @@
 
     #hero{
         background-position-x: 80%;
-        height: 500px;
+        height: 400px;
     }
     
     #msg-container{
